# termdef

./: .envrc  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  justfile
.github/workflows/: cd.yml
src/data/: Cargo.toml
src/data/src/core/: actions.rs  colors.rs  game_state.rs  mod.rs  widget_id.rs
src/display/: Cargo.toml
src/display/src/core/: button.rs  layout.rs  mod.rs  render_context.rs
src/main/: Cargo.toml  build.rs
src/main/src/: app.rs  cli.rs  main.rs  tui.rs  utils.rs
src/rules/: Cargo.toml
src/rules/src/: lib.rs
src/rules/src/core/: handle_action.rs  mod.rs  new_game.rs
