[package]
name = "data"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
derive_more = "0.99.17"
enum-iterator = "2.0.0"
enum-kinds = "0.5.1"
enumset = { version = "1.1.3", features = ["serde"] }
linkme = "0.3.25"
once_cell = "1.19.0"
ratatui = { version = "0.26.0", features = ["serde", "macros", "unstable-widget-ref"] }
serde = { version = "1.0.198", features = ["derive"] }
typed-builder = "0.18.1"