[package]
name = "display"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
data = { path = "../data", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }

crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
enumset = "1.1.3"
itertools = "0.12.1"
ratatui = { version = "0.26.0", features = ["serde", "macros", "unstable-widget-ref"] }
tracing = "0.1.37"
typed-builder = "0.18.1"
log = "0.4.21"