[package]
name = "termdef"
version = "0.0.0"
edition = "2021"
description = "termdef: Terminal Tower Defense"
build = "build.rs"
default-run = "termdef"

[dependencies]
data = { path = "../data", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }

better-panic = "0.3.0"
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
directories = "5.0.1"
human-panic = "1.2.0"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
rand = "0.8.5"
ratatui = { version = "0.26.0", features = ["serde", "macros"] }
strip-ansi-escapes = "0.2.0"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }
rusty-hook = "0.11.2"
